Basic level reader

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,11 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "type": "grunt",
+            "task": "js_compile",
+            "problemMatcher": []
         }
     ]
 }
