--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "url": "git+https://github.com/kristoffer-tvera/clickerino-engine.git"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "node-sass": "^4.7.2",
-    "grunt": "^1.0.1",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.1.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^3.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-notify": "^0.4.5",
-    "grunt-postcss": "^0.8.0",
-    "grunt-remove-logging": "^0.2.0",
-    "grunt-sass": "^2.0.0"
+    "grunt": "~1.0.4",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-browser-sync": "~2.2.0",
+    "grunt-concurrent": "~3.0.0",
+    "grunt-contrib-clean": "~2.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-uglify-es": "~3.3.0",
+    "grunt-contrib-watch": "~1.1.0",
+    "grunt-notify": "~0.4.5",
+    "grunt-postcss": "~0.9.0",
+    "grunt-remove-logging": "~0.2.0",
+    "grunt-sass": "~3.1.0",
+    "node-sass": "~4.13.0"
   },
   "author": "",
   "license": "ISC",
