--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "grunt-postcss": "~0.9.0",
     "grunt-remove-logging": "~0.2.0",
     "grunt-sass": "~3.1.0",
-    "node-sass": "~4.13.0"
+    "node-sass": "~4.13.0",
+    "diff": ">=3.5.0"
   },
   "author": "",
   "license": "ISC",
