--- a/package.json
+++ b/package.json
@@ -7,25 +7,29 @@
     "url": "git+https://github.com/kristoffer-tvera/clickerino-engine.git"
   },
   "devDependencies": {
+    "diff": ">=3.5.0",
     "grunt": "~1.0.4",
     "grunt-autoprefixer": "~3.0.4",
     "grunt-browser-sync": "~2.2.0",
     "grunt-concurrent": "~3.0.0",
     "grunt-contrib-clean": "~2.0.0",
     "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-uglify": "^4.0.1",
     "grunt-contrib-uglify-es": "~3.3.0",
     "grunt-contrib-watch": "~1.1.0",
     "grunt-notify": "~0.4.5",
     "grunt-postcss": "~0.9.0",
     "grunt-remove-logging": "~0.2.0",
-    "grunt-sass": "~3.1.0",
-    "node-sass": "~4.13.0",
-    "diff": ">=3.5.0"
+    "grunt-sass": "^3.1.0",
+    "node-sass": "^4.13.1"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kristoffer-tvera/clickerino-engine/issues"
   },
-  "homepage": "https://github.com/kristoffer-tvera/clickerino-engine#readme"
+  "homepage": "https://github.com/kristoffer-tvera/clickerino-engine#readme",
+  "dependencies": {
+    "autoprefixer": "^9.7.5"
+  }
 }
